--- a/views/categoriescreate.ejs
+++ b/views/categoriescreate.ejs
@@ -161,23 +161,23 @@
       <div class="d-flex flex-col border border-dark rounded-pill bg-dark justify-content-center mx-auto" id="tlbFloat" style="max-width: 300px;">
         <div class="col-auto d-flex flex-row flex-shrink-1 mx-auto justify-content-center ">
           <div class="btn-group col d-flex flex-fill justify-content-evenly me-2 ps-2" role="group" aria-label="Items">
-            <button type="button" id="btnAddItem" class="btn btn-secondary" onclick="addInputItemByButton()" data-bs-toggle="tooltip" title="Add A New Item Spot">
+            <button type="button" id="btnAddItem" class="btn btn-secondary" onclick="addInputItemByButton()" title="Add A New Item Spot">
               ➕
             </button>
-            <button type="button" id="btnRemoveItem" class="btn btn-secondary" onclick="delInputItemByButton()" data-bs-toggle="tooltip" title="Remove Last Item Spot">
+            <button type="button" id="btnRemoveItem" class="btn btn-secondary" onclick="delInputItemByButton()" title="Remove Last Item Spot">
               ➖
             </button>
           </div>
           <div class="btn-group col d-flex flex-fill justify-content-evenly me-2" role="group" aria-label="Items">
-            <button type="button" id="btnRemoveRow" class="btn btn-secondary" onclick="addRowByButton()" data-bs-toggle="tooltip" title="Add A New Row of Items">
+            <button type="button" id="btnRemoveRow" class="btn btn-secondary" onclick="addRowByButton()" title="Add A New Row of Items">
               ⬇️
             </button>
-            <button type="button" id="btnAddRow" class="btn btn-secondary" onclick="delRowByButton()" data-bs-toggle="tooltip" title="Remove Last Row of Items">
+            <button type="button" id="btnAddRow" class="btn btn-secondary" onclick="delRowByButton()" title="Remove Last Row of Items">
               ⬆️
             </button>
           </div>
           <div class="btn-group col d-flex flex-fill justify-content-evenly me-2">
-            <button type="button" id="btnPuzzleSubmit" class="btn btn-secondary" onclick="submitFormData()" data-bs-toggle="tooltip" title="Submit Puzzle">
+            <button type="button" id="btnPuzzleSubmit" class="btn btn-secondary" onclick="submitFormData()" title="Submit Puzzle">
               ✅
             </button>                                        
           </div>
@@ -869,6 +869,15 @@
         }, false);        
       }
       
+
+      // tooltips for readability when editing
+      $( document ).tooltip({ 
+                position: { 
+                    my: "left top-125%", 
+                    at: "top center" 
+                } 
+            });
+
     </script>
 
     <%- include('./partials/footer.ejs') %>
