--- a/views/blogview.ejs
+++ b/views/blogview.ejs
@@ -33,7 +33,7 @@
     <div id="blog-background" class="blog-background"></div>    
     <%- include('./partials/nav.ejs') %>
     <div class="container align-content-center justify-content-center mt-5" style="position:relative;max-width: 1000px;">
-      <div class="row">
+      <div class="row mt-3">
         <dive class="col text-center">
           <button type="button" class="btn btn-primary <%=blogData.previousEntry ? '' : 'd-none'%>" onclick="previousEntry()">
             <i class="bi bi-arrow-left"></i> Previous
