--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,11 +31,8 @@
         Family Website
       </div>
       <div class="justify-content-center align-items-center">
-        <div class="display-5 text-center text-black text-shadow-black">
-          This website is hosted on a RaspberryPi
-        </div>
-        <div class="display-5 text-center text-black text-shadow-black">
-          Using Node.js as the back-end server
+        <div class="row justify-content-center">
+          <a href="/dailyscripture/view/:Today" class="display-4 fw-bold text-center">Read Today's Scripture Insight</a>
         </div>
       </div>
     </div>
