Adding privacy pages for beta games in Google play console Adding instructions for joining Beta programs for games in play console Adding images to support beta joining instructions
Adding message on home page to point towards installing beta

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,8 +35,12 @@
           <a href="/dailyscripture/view/:Today" class="display-4 fw-bold text-center">Read Today's Scripture Insight</a>
         </div>
       </div>
+      <div class="justify-content-center align-items-center">
+        <div class="p-5 row justify-content-center">
+          <p class="display-6 text-shadow-white text-center">If you have an Android phone, please help us test our games by following these <a class="display-6" href="/joinbetaprogram">instructions</a></p>
+        </div>
+      </div>
     </div>
-
     <%- include('./partials/body-script.ejs') %>
     <%- include('./partials/footer.ejs') %>
   </body>
