--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,16 +1,13 @@
 <title><%= title%></title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/styles.css">
-  <link rel="stylesheet" href="/jquery-ui.css">
-  <!-- Latest compiled and minified CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <!-- Site Utility CSS which complements Bootstrap styles -->
-  <link href="/utility.css" rel="stylesheet" crossorigin="anonymous">
-  <style>
-    body{
-      padding-left: <%=navBodyPad%>;
-    }
-  </style>
-
-  
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+<link rel="stylesheet" href="/styles.css">
+<link rel="stylesheet" href="/utility.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link rel="stylesheet" href="/jquery-ui.css">
+<style>
+  body {
+    padding-left: <%=navBodyPad%>;
+  }
+</style>
